2007-01-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/vpacket.h:
	#includes from fvwm path with "..." not <...>

	* fvwm/stack.c:
	#includes from library path with "..." not <...>

2007-01-28  Simon Griph	 <simon(at)griph(dot)se>

	* NEWS:
	* AUTHORS:
	* INSTALL.fvwm:
	documented new svg support

	* configure.ac:
	added librsvg detection

	* fvwm/Makefile.am (LDADD, INCLUDES):
	added rsvg_LIBS, rsvg_CFLAGS

	* fvwm/expand.c (expand_vars_extended):
	new extended variables
	$[w.iconfile.svgopts] and $[w.miniiconfile.svgopts]

	* fvwm/fvwm.1.in (OPTIONS):
	(ICONS AND IMAGES):
	documented new svg support
	(COMMAND EXPANSION):
	documented new extended variables

	* fvwm/fvwm.c (setVersionInfo):
	(main):
	added Frsvg_init() call

	* libs/Fsvg.h:
	new file

	* libs/Makefile.am (libfvwm_a_SOURCES):
	added Fsvg.h
	(INCLUDES):
	added rsvg_CFLAGS

	* libs/Picture.c (PCacheFvwmPicture):
	hid svgopts from isFileStampChanged()

	* libs/PictureBase.c (PictureFindImageFile):
	hid svgopts from searchPath()

	* libs/PictureBase.h:

	* libs/PictureImageLoader.c (PImageLoadFvwmPictureFromFile):
	hid svgopts from setFileStamp()
	(PImageLoadSvg):
	new svg image loader

	* libs/fvwmlib.c (flib_init_graphics):
	added Frsvg_init() call

2007-01-28  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/stack.c (__is_restack_needed)
	(is_transient_subtree_straight):
	(__restack_window):
	fix crash when trying to restack destroyed window

2007-01-27  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* libs/Makefile.am (libfvwm_a_SOURCES):
	add fvwmlib.c

	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	* fvwm/menus.c (move_any_menu)
	set menu backgrounds before moving. Makes transparent menus move
	more seamless.

	* fvwm/menus.c (update_transparent_menu_bg, repaint_transparent_menu):
	* fvwm/menus.c (update_transparent_menu_bg, repaint_transparent_menu):
	add update_transparent_menu_bg to allow set of transparent menu