@@ -39,7 +39,7 @@ LDADD = \
 	$(png_LIBS) $(rsvg_LIBS) $(intl_LIBS)
 
 INCLUDES = \
-	-I$(top_srcdir) -I$(top_srcdir)/libs $(stroke_CFLAGS) $(Xft_CFLAGS) \
+	-I$(top_srcdir) $(stroke_CFLAGS) $(Xft_CFLAGS) \
 	$(xpm_CFLAGS) $(X_CFLAGS) $(iconv_CFLAGS) $(Xrender_CFLAGS) \
 	$(Bidi_CFLAGS) $(png_CFLAGS) $(rsvg_CFLAGS) $(intl_CFLAGS)
 
