@@ -26,12 +26,12 @@
 #include "libs/modifiers.h"
 #include "libs/Parse.h"
 #include "libs/Strings.h"
+#include "libs/defaults.h"
 #include "fvwm.h"
 #include "externs.h"
 #include "cursor.h"
 #include "functions.h"
 #include "bindings.h"
-#include "defaults.h"
 #include "module_interface.h"
 #include "misc.h"
 #include "screen.h"
