@@ -33,13 +33,13 @@
 #include "libs/fvwmlib.h"
 #include "libs/FShape.h"
 #include "libs/Parse.h"
+#include "libs/lang-strings.h"
 #include "fvwm.h"
 #include "externs.h"
 #include "execcontext.h"
 #include "commands.h"
 #include "misc.h"
 #include "screen.h"
-#include "lang-strings.h"
 #include "update.h"
 #include "style.h"
 #include "geometry.h"
